--- a/services/adgangskontrollen/view.html
+++ b/services/adgangskontrollen/view.html
@@ -18,7 +18,7 @@
 		 `"` `"` `"`        `"` `"`  `"`    `"`   `"` `"`       `"` `"` `"`
 ">
 <body style="margin:0; text-align:center; width:100%; height:100%; background:#333;">
-<img style="max-width:100%; max-height:100%">
+<img style="max-width:100%; max-height:100%" src="/adgangskontrollen/image.jpg">
 <script>
 	setInterval(function(){document.getElementsByTagName('img')[0].src = "/adgangskontrollen/image.jpg?random="+new Date();}, 5000)
 </script>
