--- a/services/adgangskontrollen/view.html
+++ b/services/adgangskontrollen/view.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html "
 '    .''.
  '..'    '.  \/       \/            __       __
-		   '.(corporate)o         ."  ".   ."  ".
-		   ____      ""          /  .-. \_/ .-.  \                  ____
-		  /    `"=._           _/  (o  )   (o  )  \_           _.="`    \
-		 |          "=.      /'     '-'_,-,_'-'     `\      .="          |
-		 |     ".      ".   |   '.  _."_.-._"._  .'   |   ."      ."     |
-		  ".     ".      ".  \    `"-.~._^_.~.-"`    /  ."      ."     ."
-			".     ".      ". `--._   `-.~.-`   _.--` ."      ."     ."
-			  "=._   ".      "=./  `._       _.`  \.="      ."   _.="
-				  "=._ "._     /      `"""""`      \     _." _.="
-					  "=. "-. :                     : .-" .="
-						 ".  "|     Y          Y    |"  ."
-					   _.="`  _\    \          /    /_ `"=._     
-			_.-"""``""`  _.-"`__\    \-.____.-/    /__`"-._ `""``"""-._
-		 .-'.-' _.-'_.-"`._..' .' .'\ \      / /'. '._'.   `"-._'-._'-.'-.
-		 `"` `"` `"`        `"` `"`  `"`    `"`   `"` `"`       `"` `"` `"`
+           '.(corporate)o         ."  ".   ."  ".
+           ____      ""          /  .-. \_/ .-.  \                  ____
+          /    `"=._           _/  (o  )   (o  )  \_           _.="`    \
+         |          "=.      /'     '-'_,-,_'-'     `\      .="          |
+         |     ".      ".   |   '.  _."_.-._"._  .'   |   ."      ."     |
+          ".     ".      ".  \    `"-.~._^_.~.-"`    /  ."      ."     ."
+            ".     ".      ". `--._   `-.~.-`   _.--` ."      ."     ."
+              "=._   ".      "=./  `._       _.`  \.="      ."   _.="
+                  "=._ "._     /      `"""""`      \     _." _.="
+                      "=. "-. :                     : .-" .="
+                         ".  "|     Y          Y    |"  ."
+                       _.="`  _\    \          /    /_ `"=._     
+            _.-"""``""`  _.-"`__\    \-.____.-/    /__`"-._ `""``"""-._
+         .-'.-' _.-'_.-"`._..' .' .'\ \      / /'. '._'.   `"-._'-._'-.'-.
+         `"` `"` `"`        `"` `"`  `"`    `"`   `"` `"`       `"` `"` `"`
 ">
 <body style="margin:0; text-align:center; width:100%; height:100%; background:#333;">
 <img style="max-width:100%; max-height:100%" src="/adgangskontrollen/image.jpg">
 <script>
-	setInterval(function(){document.getElementsByTagName('img')[0].src = "/adgangskontrollen/image.jpg?random="+new Date();}, 5000)
+    setInterval(function(){document.getElementsByTagName('img')[0].src = "/adgangskontrollen/image.jpg?random="+new Date();}, 2000)
 </script>
 <!-- 
                             __--~~--_     _--~~--__
@@ -37,7 +37,7 @@
                        /  __---~~~~         ~~~~---__  \
                       _-~~                           ~~-_
                     /~                PVV               ~\
-                   (_-~          REM BEST GRILL        ~-_)
+                   (_-~          RAM BEST GRILL        ~-_)
                      \                                   /
                     _-~-_                             _-~-_
                    /     ~~--___               ___--~~     \
